# litter-networks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.txt  convert-docs.sh  mount-onedrive.sh  package.json  run_local_api_lnweb.sh  run_local_both_lnweb.sh  run_local_lnweb-api.sh  run_local_react_lnweb.sh  run_networker.sh  sync_lnweb-react.sh
.github/workflows/: litter-networker.yml  lnweb-api.yml  lnweb-react.yml
apps/litter-networker/: README.md  package-lock.json  package.json  run_dev.sh  tsconfig.json  vite.config.ts  vitest.config.ts
apps/litter-networker/scripts/: copy-python-utils.mjs  start-electron.cjs
apps/litter-networker/src/python-utils/lnwordtohtml/: README.md  pyproject.toml
apps/litter-networker/src/python-utils/lnwordtohtml/src/lnwordtohtml/: __init__.py  artifacts.py  aws_clients.py  cli.py  config.py  converter.py  hierarchy.py  runner.py  scanner.py  styles.py  sync_targets.py
docs/: architecture.md
tools/: license_check.py  license_fix.py  license_policy.py
web/lnweb-api/: .eslintrc.js  .eslintrc.json  LNWeb-API.esproj  LNWeb-API.njsproj  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  run-local-endpoint-checks.sh  run-remote-endpoint-checks.sh  run_local_server.sh  samconfig.toml  sync_lambda.sh  template.yaml  tsconfig.json
web/lnweb-api/src/: app.js  app.ts  (+9 more)
web/lnweb-react/: README.md  eslint.config.js  index.html  package-lock.json  package.json  run_local_server.sh  sync_public.sh  vite.config.ts  vitest.config.ts
web/terraform/: README.md  cloudfront.tf  spa-rewrite.js  sync_terraform.sh
(+302 files in other folders)
