[project]
name = "lnwordtohtml"
version = "0.1.0"
description = "Convert LN Word docs into HTML + CSS and sync to AWS"
readme = "README.md"
authors = [
  { name = "Litter Networks" }
]
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "python-docx>=1.1.0",
  "click>=8.1.7",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "moto[boto3]>=5.0.0",
  "pytest>=8.0.0",
  "black>=24.3.0",
  "ruff>=0.5.5"
]

[project.scripts]
lnwordtohtml = "lnwordtohtml.cli:app"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
